--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"homepage": "https://github.com/baguilar6174/node-template-server#readme",
 	"devDependencies": {
+		"@flydotio/dockerfile": "^0.7.10",
 		"@types/compression": "^1.7.5",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
