--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,15 @@
-# fly.toml app configuration file generated for ldm-archive-server-wandering-snowflake-8118 on 2025-06-14T15:58:34Z
+# fly.toml app configuration file generated for ldm-archive-server-wandering-snowflake-8118 on 2025-06-14T11:55:06-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ldm-archive-server'
+app = 'ldm-archive-server-wandering-snowflake-8118'
 primary_region = 'atl'
 
 [build]
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -20,4 +20,3 @@ primary_region = 'atl'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
